// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductCard Debe de incrementar el contador 1`] = `
<DocumentFragment>
  <div
    class="productCard undefined"
  >
    <h1>
      Product card
    </h1>
    <span>
      0
    </span>
    <button />
  </div>
</DocumentFragment>
`;

exports[`ProductCard Debe de mostrar el componente 1`] = `
<div>
  <div
    class="productCard undefined"
  >
    <h1>
      Product card
    </h1>
  </div>
</div>
`;
